k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accounting-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  labels:
      name: accounting-ingress
spec:
  rules:
  # - host: ""
  - http:
      paths:

      - pathType: Prefix
        path: /api/v1/auth
        backend:
          service:
            name: auth-service
            port:
              number: 8080

      - pathType: Prefix
        path: /api/v1/timeRecord
        backend:
          service:
            name: time-record-service
            port:
              number: 8080
